Fix bugs: backwards movement over players, players correctly return to the submarine and don't over/undershoot, players can't go deeper when heading to the sub when holding too much treasure, AI limits treasures held

--- a/client/src/components/molecules/TwoChoicesContainer/TwoChoicesContainer.css
+++ b/client/src/components/molecules/TwoChoicesContainer/TwoChoicesContainer.css
@@ -1,6 +1,5 @@
-.announcer-button-container {
+.two-choices-container {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    width: 330px;
 }
